# Engineering_standards

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENCE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  standards  standards-index.yaml
.claude/skills/: README.md  add-source.md  impact.md  new-standard.md  preflight.md  rebuild-graph.md  uk-gov-standards.md
.github/ISSUE_TEMPLATE/: new-standard.yml
.github/workflows/: build-extension.yml  ci-code.yml  ci-standards.yml  compliance.yml  generate-standard-from-issue.yml  impact-analysis.yml  pages.yml  validate.yml
docs/: _config.yml  about.md  architecture-agentic-workflows.md  exemptions.md  future-sources.md  index.md  methodology.md  sources-graph.md  sources.md  testing.md  usage-by-role.md  versioning.md
mcp-server/: README.md  server.py
modules/: README.md
scripts/: build_site.py  build_skill.py  check_compliance.py  check_graph_sync.py  impact_analysis.py  new_standard.py  onboarding.py  query_standards.py  release.py  suggest_standards.py  trusted_sources.yaml  update_counts.py  validate_standards.py
standards/: ACC-002.md  ARC-001.md  ARC-002.md  ARC-005.md  DAT-001.md  DAT-002.md  EMG-001.md  EMG-003.md  ENG-001.md  ENG-002.md  ENG-003.md  OPS-001.md  OPS-002.md  SEC-001.md  SEC-002.md  SEC-005.md  SEC-007.md
standards_lib/: README.md  __init__.py  query.py
tests/: conftest.py  test_build_pipeline.py  test_check_compliance.py  test_new_standard.py  test_query.py  test_validate.py
vscode-extension/: README.md  package-lock.json  package.json
(+104 files in other folders)
