[project]
name = "uk-gov-engineering-standards"
version = "1.0.0"
description = "UK Government Engineering Standards — query library and tooling"
requires-python = ">=3.9"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4.0", "bandit>=1.7.0", "cyclonedx-bom>=4.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B"]
ignore = [
    "S101",  # assert used in tests
    "S603",  # subprocess without shell=True is fine
    "S607",  # partial path to executable is fine for git/grep
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.bandit]
exclude_dirs = ["tests", "vscode-extension"]
